--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -331,11 +331,35 @@
   cfc.meta:n                        = { canvas-frame-color = #1 },
   cfc.value_required:,
   
-  % Canvas frame width
-  canvas-frame-width.tl_set:N        = \subfiglist_canvas_frame_width_default_tl,
+  % Canvas frame border width
+  canvas-frame-width.tl_set:N       = \subfiglist_canvas_frame_width_default_tl,
   canvas-frame-width.value_required:,
   cfw.meta:n                        = { canvas-frame-width = #1 },
   cfw.value_required:,
+  
+  % Canvas frame top separation
+  canvas-frame-top.tl_set:N         = \subfiglist_canvas_frame_top_default_tl,
+  canvas-frame-top.value_required:,
+  cft.meta:n                        = { canvas-frame-top = #1 },
+  cft.value_required:,
+  
+  % Canvas frame bottom separation
+  canvas-frame-bottom.tl_set:N      = \subfiglist_canvas_frame_bottom_default_tl,
+  canvas-frame-bottom.value_required:,
+  cfb.meta:n                        = { canvas-frame-bottom = #1 },
+  cfb.value_required:,
+  
+  % Canvas frame left separation
+  canvas-frame-left.tl_set:N        = \subfiglist_canvas_frame_left_default_tl,
+  canvas-frame-left.value_required:,
+  cfl.meta:n                        = { canvas-frame-left = #1 },
+  cfl.value_required:,
+  
+  % Canvas frame right separation
+  canvas-frame-right.tl_set:N       = \subfiglist_canvas_frame_right_default_tl,
+  canvas-frame-right.value_required:,
+  cfr.meta:n                        = { canvas-frame-right = #1 },
+  cfr.value_required:,
   
   % Horizontal positioning of label (left, center, right)
   label-hpos.choice:,
@@ -405,6 +429,10 @@
   canvas-right           = 0pt,
   canvas-frame-color     = none,
   canvas-frame-width     = 2pt,
+  canvas-frame-top       = 0pt,
+  canvas-frame-bottom    = 0pt,
+  canvas-frame-left      = 0pt,
+  canvas-frame-right     = 0pt,
   label-hpos             = l,
   label-vpos             = t,
   label-xshift           = 0.5ex,
@@ -508,45 +536,69 @@
   \keys_define:nn { subfiglistcanvas }
   {
     % Space above canvas
-    top.dim_set:N         = \subfiglist_canvas_top_dim,
+    top.dim_set:N          = \subfiglist_canvas_top_dim,
     top.value_required:,
-    t.meta:n              = { top = #1 },
+    t.meta:n               = { top = #1 },
     t.value_required:,
     
     % Space below canvas
-    bottom.dim_set:N      = \subfiglist_canvas_bot_dim,
+    bottom.dim_set:N       = \subfiglist_canvas_bot_dim,
     bottom.value_required:,
-    b.meta:n              = { bottom = #1 },
+    b.meta:n               = { bottom = #1 },
     b.value_required:,
     
     % Space left of canvas
-    left.dim_set:N        = \subfiglist_canvas_left_dim,
+    left.dim_set:N         = \subfiglist_canvas_left_dim,
     left.value_required:,
-    l.meta:n              = { left = #1 },
+    l.meta:n               = { left = #1 },
     l.value_required:,
     
     % Space right of canvas
-    right.dim_set:N       = \subfiglist_canvas_right_dim,
+    right.dim_set:N        = \subfiglist_canvas_right_dim,
     right.value_required:,
-    r.meta:n              = { right = #1 },
+    r.meta:n               = { right = #1 },
     r.value_required:,
     
     % Frame color
-    frame-color.tl_set:N  = \subfiglist_canvas_frame_color_tl,
+    frame-color.tl_set:N   = \subfiglist_canvas_frame_color_tl,
     frame-color.value_required:,
-    frame-colour.meta:n   = { frame-color = #1 },
+    frame-colour.meta:n    = { frame-color = #1 },
     frame-colour.value_required:,
-    fc.meta:n             = { frame-color = #1 },
+    fc.meta:n              = { frame-color = #1 },
     fc.value_required:,
     
     % Frame width
-    frame-width.dim_set:N = \subfiglist_canvas_frame_width_dim,
+    frame-width.dim_set:N  = \subfiglist_canvas_frame_width_dim,
     frame-width.value_required:,
-    fw.meta:n             = { frame-width = #1 },
-    fw.value_required:
+    fw.meta:n              = { frame-width = #1 },
+    fw.value_required:,
     
+    % Frame top separation
+    frame-top.dim_set:N    = \subfiglist_canvas_frame_top_dim,
+    frame-top.value_required:,
+    ft.meta:n              = { frame-top = #1 },
+    ft.value_required:,
+
+    % Frame bottom separation
+    frame-bottom.dim_set:N = \subfiglist_canvas_frame_bottom_dim,
+    frame-bottom.value_required:,
+    fb.meta:n              = { frame-bottom = #1 },
+    fb.value_required:,
+
+    % Frame left separation
+    frame-left.dim_set:N   = \subfiglist_canvas_frame_left_dim,
+    frame-left.value_required:,
+    fl.meta:n              = { frame-left = #1 },
+    fl.value_required:,
+
+    % Frame right separation
+    frame-right.dim_set:N  = \subfiglist_canvas_frame_right_dim,
+    frame-right.value_required:,
+    fr.meta:n              = { frame-right = #1 },
+    fr.value_required:,
+
     % Error catching
-    unknown.code:n        =
+    unknown.code:n         =
     {
       \msg_error:nnVf { subfiglist } { option~unknown }
         \l_keys_key_tl { command~\subfiglist_csname_tl }
@@ -2047,12 +2099,16 @@
       \prop_put:NnV \subfiglist_tmp_prop { ratio } \subfiglist_tmpa_tl
 
       % Process opitonal arguments
-      \subfiglist_key_set:nnV { subfiglistcanvas } { top }         \subfiglist_canvas_top_default_tl
-      \subfiglist_key_set:nnV { subfiglistcanvas } { bottom }      \subfiglist_canvas_bot_default_tl
-      \subfiglist_key_set:nnV { subfiglistcanvas } { left }        \subfiglist_canvas_left_default_tl
-      \subfiglist_key_set:nnV { subfiglistcanvas } { right }       \subfiglist_canvas_right_default_tl
-      \subfiglist_key_set:nnV { subfiglistcanvas } { frame-color } \subfiglist_canvas_frame_color_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { top }          \subfiglist_canvas_top_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { bottom }       \subfiglist_canvas_bot_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { left }         \subfiglist_canvas_left_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { right }        \subfiglist_canvas_right_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { frame-color }  \subfiglist_canvas_frame_color_default_tl
       \subfiglist_key_set:nnV { subfiglistcanvas } { frame-width }  \subfiglist_canvas_frame_width_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { frame-top }    \subfiglist_canvas_frame_top_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { frame-bottom } \subfiglist_canvas_frame_bottom_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { frame-left }   \subfiglist_canvas_frame_left_default_tl
+      \subfiglist_key_set:nnV { subfiglistcanvas } { frame-right }  \subfiglist_canvas_frame_right_default_tl
       \keys_set:nn { subfiglistcanvas } { ##1 }
 
       % Save specified offsets
@@ -2061,7 +2117,11 @@
       \prop_put:NnV \subfiglist_tmp_prop { left }        \subfiglist_canvas_left_dim
       \prop_put:NnV \subfiglist_tmp_prop { right }       \subfiglist_canvas_right_dim
       \prop_put:NnV \subfiglist_tmp_prop { frame-color } \subfiglist_canvas_frame_color_tl
-      \prop_put:NnV \subfiglist_tmp_prop { frame-width }  \subfiglist_canvas_frame_width_dim
+      \prop_put:NnV \subfiglist_tmp_prop { frame-width } \subfiglist_canvas_frame_width_dim
+      \prop_put:NnV \subfiglist_tmp_prop { frame-top }   \subfiglist_canvas_frame_top_dim
+      \prop_put:NnV \subfiglist_tmp_prop { frame-bot }   \subfiglist_canvas_frame_bottom_dim
+      \prop_put:NnV \subfiglist_tmp_prop { frame-left }  \subfiglist_canvas_frame_left_dim
+      \prop_put:NnV \subfiglist_tmp_prop { frame-right } \subfiglist_canvas_frame_right_dim
 
       \subfiglist_tl_set_from_prop:NN \subfiglist_tmpa_tl \subfiglist_tmp_prop
       \prop_put:NnV \subfiglist_canvas_prop { ##2 } \subfiglist_tmpa_tl
@@ -2121,21 +2181,29 @@
     }
     
     % Process opitonal arguments
-    \subfiglist_key_set:nnV { subfiglistcanvas } { top }    \subfiglist_canvas_top_default_tl
-    \subfiglist_key_set:nnV { subfiglistcanvas } { bottom } \subfiglist_canvas_bot_default_tl
-    \subfiglist_key_set:nnV { subfiglistcanvas } { left }   \subfiglist_canvas_left_default_tl
-    \subfiglist_key_set:nnV { subfiglistcanvas } { right }  \subfiglist_canvas_right_default_tl
-    \subfiglist_key_set:nnV { subfiglistcanvas } { frame-color } \subfiglist_canvas_frame_color_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { top }          \subfiglist_canvas_top_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { bottom }       \subfiglist_canvas_bot_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { left }         \subfiglist_canvas_left_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { right }        \subfiglist_canvas_right_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { frame-color }  \subfiglist_canvas_frame_color_default_tl
     \subfiglist_key_set:nnV { subfiglistcanvas } { frame-width }  \subfiglist_canvas_frame_width_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { frame-top }    \subfiglist_canvas_frame_top_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { frame-bottom } \subfiglist_canvas_frame_bottom_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { frame-left }   \subfiglist_canvas_frame_left_default_tl
+    \subfiglist_key_set:nnV { subfiglistcanvas } { frame-right }  \subfiglist_canvas_frame_right_default_tl
     \keys_set:nn { subfiglistcanvas } { #1 }
     
     % Save specified offsets
-    \prop_put:NnV \subfiglist_tmp_prop { top }   \subfiglist_canvas_top_dim
-    \prop_put:NnV \subfiglist_tmp_prop { bot }   \subfiglist_canvas_bot_dim
-    \prop_put:NnV \subfiglist_tmp_prop { left }  \subfiglist_canvas_left_dim
-    \prop_put:NnV \subfiglist_tmp_prop { right } \subfiglist_canvas_right_dim
+    \prop_put:NnV \subfiglist_tmp_prop { top }         \subfiglist_canvas_top_dim
+    \prop_put:NnV \subfiglist_tmp_prop { bot }         \subfiglist_canvas_bot_dim
+    \prop_put:NnV \subfiglist_tmp_prop { left }        \subfiglist_canvas_left_dim
+    \prop_put:NnV \subfiglist_tmp_prop { right }       \subfiglist_canvas_right_dim
     \prop_put:NnV \subfiglist_tmp_prop { frame-color } \subfiglist_canvas_frame_color_tl
-    \prop_put:NnV \subfiglist_tmp_prop { frame-width }  \subfiglist_canvas_frame_width_dim
+    \prop_put:NnV \subfiglist_tmp_prop { frame-width } \subfiglist_canvas_frame_width_dim
+    \prop_put:NnV \subfiglist_tmp_prop { frame-top }   \subfiglist_canvas_frame_top_dim
+    \prop_put:NnV \subfiglist_tmp_prop { frame-bot }   \subfiglist_canvas_frame_bottom_dim
+    \prop_put:NnV \subfiglist_tmp_prop { frame-left }  \subfiglist_canvas_frame_left_dim
+    \prop_put:NnV \subfiglist_tmp_prop { frame-right } \subfiglist_canvas_frame_right_dim
     
     \subfiglist_tl_set_from_prop:NN \subfiglist_tmpa_tl \subfiglist_tmp_prop
     \prop_put:NnV \subfiglist_canvas_prop { #2 } \subfiglist_tmpa_tl
@@ -2240,10 +2308,21 @@
   \subfiglist_tl_if_eq_charcode:nVF { none } \subfiglist_tmpa_tl
   {
     \prop_get:NnN \subfiglist_tmp_prop { frame-width } \subfiglist_tmpa_tl
+    \prop_get:NnN \subfiglist_tmp_prop { frame-left } \subfiglist_tmpb_tl
     \dim_add:NV #2 \subfiglist_tmpa_tl
+    \dim_add:NV #2 \subfiglist_tmpb_tl
+    
+    \prop_get:NnN \subfiglist_tmp_prop { frame-right } \subfiglist_tmpb_tl
     \dim_add:NV #2 \subfiglist_tmpa_tl
+    \dim_add:NV #2 \subfiglist_tmpb_tl
+    
+    \prop_get:NnN \subfiglist_tmp_prop { frame-top } \subfiglist_tmpb_tl
     \dim_add:NV #3 \subfiglist_tmpa_tl
+    \dim_add:NV #3 \subfiglist_tmpb_tl
+    
+    \prop_get:NnN \subfiglist_tmp_prop { frame-bot } \subfiglist_tmpb_tl
     \dim_add:NV #3 \subfiglist_tmpa_tl
+    \dim_add:NV #3 \subfiglist_tmpb_tl
   }
   
   \prop_put:NnV \subfiglist_tmp_prop { hoff } #2
@@ -2783,35 +2862,57 @@
     \dim_set:NV \subfiglist_tmpa_dim \subfiglist_tmpa_tl
     \dim_set:NV \subfiglist_tmpb_dim \subfiglist_tmpb_tl
     
-  %  % Has a frame been requested?
-  %  \bool_set:Nx \subfiglist_tmp_bool
-  %    { \tl_item:Nn \subfiglist_dummy_file_frame_tl { #1 } }
-    
     % Put minipage with size of dummy
     \begin { minipage } [ b ] [ \subfiglist_tmpb_dim ] [ c ] { \subfiglist_tmpa_dim }
-      \mbox
-      {
-  %      % Put frame if necessary
-  %      \bool_if:NT \subfiglist_tmp_bool
-  %      {
-  %        % Calculate frame width
-  %        \dim_set:Nn \subfiglist_tmpa_dim { #2 }
-  %        \dim_sub:Nn \subfiglist_tmpa_dim { 2 \fboxrule }
-  %        \dim_sub:Nn \subfiglist_tmpa_dim { 2 \fboxsep }
-  %        % Calculate frame height
-  %        \dim_set:Nn \subfiglist_tmpb_dim { #3 }
-  %        \dim_sub:Nn \subfiglist_tmpb_dim { 2 \fboxrule }
-  %        \dim_sub:Nn \subfiglist_tmpb_dim { 2 \fboxsep }
-  %        % Put frame box
-  %        \fbox
-  %        {
-  %          \begin { minipage } [ c ] [ \subfiglist_tmpb_dim ] { \subfiglist_tmpa_dim }
-  %            \mbox{}
-  %          \end { minipage }
-  %        }
-  %      }
-      }
+      \mbox { }
     \end { minipage }
+  }
+}
+
+\cs_new:Npn \subfiglist_put_framed_canvas:Nn #1 #2
+%
+% #1: Property list containing canvas properties
+% #2: Canvas number
+%
+{
+  \colorlet { subfiglist_current_color } { . }
+  {
+    \color { \subfiglist_tmpa_tl }
+    \prop_get:NnN #1 { frame-width } \subfiglist_tmpa_tl
+    \dim_set:Nn \fboxsep { 0pt }
+    \dim_set:Nn \fboxrule { \subfiglist_tmpa_tl }
+    \fbox
+    {
+      \color { subfiglist_current_color }
+      \vbox:n
+      {
+        % Vertical offset
+        \prop_get:NnN #1 { frame-top } \subfiglist_tmpa_tl
+        \dim_set:NV \subfiglist_tmpa_dim \subfiglist_tmpa_tl
+        \vspace { \subfiglist_tmpa_dim }
+        
+        \hbox:n
+        {
+          % Horizontal offset
+          \prop_get:NnN #1 { frame-left } \subfiglist_tmpa_tl
+          \dim_set:NV \subfiglist_tmpa_dim \subfiglist_tmpa_tl
+          \hspace { \subfiglist_tmpa_dim }
+          
+          \prop_get:NnN #1 { type } \subfiglist_tmpa_tl
+          \subfiglist_use:c { subfiglist_put_ \tl_use:N \subfiglist_tmpa_tl :Nn } #1 { #2 }
+          
+          % Horizontal offset
+          \prop_get:NnN #1 { frame-right } \subfiglist_tmpa_tl
+          \dim_set:NV \subfiglist_tmpa_dim \subfiglist_tmpa_tl
+          \hspace { \subfiglist_tmpa_dim }
+        }
+        
+        % Vertical offset
+        \prop_get:NnN #1 { frame-bot } \subfiglist_tmpa_tl
+        \dim_set:NV \subfiglist_tmpa_dim \subfiglist_tmpa_tl
+        \vspace { \subfiglist_tmpa_dim }
+      }
+    }
   }
 }
 
@@ -2846,19 +2947,7 @@
           \prop_get:NnN \subfiglist_tmp_prop { type } \subfiglist_tmpa_tl
           \subfiglist_use:c { subfiglist_put_ \tl_use:N \subfiglist_tmpa_tl :Nn } \subfiglist_tmp_prop { #1 }
         }{
-          \colorlet { subfiglist_current_color } { . }
-          {
-            \color { \subfiglist_tmpa_tl }
-            \prop_get:NnN \subfiglist_tmp_prop { frame-width } \subfiglist_tmpa_tl
-            \dim_set:Nn \fboxsep { 0pt }
-            \dim_set:Nn \fboxrule { \subfiglist_tmpa_tl }
-            \fbox
-            {
-              \color { subfiglist_current_color }
-              \prop_get:NnN \subfiglist_tmp_prop { type } \subfiglist_tmpa_tl
-              \subfiglist_use:c { subfiglist_put_ \tl_use:N \subfiglist_tmpa_tl :Nn } \subfiglist_tmp_prop { #1 }
-            }
-          }
+          \subfiglist_put_framed_canvas:Nn \subfiglist_tmp_prop { #1 }
         }
         % Horizontal offset
         \prop_get:NnN \subfiglist_tmp_prop { right } \subfiglist_tmpa_tl
