--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -1603,29 +1603,31 @@
   \prg_return_true:
 }
 
-\cs_new:Npn \subfiglist_tokenize_integer:NN #1 #2
+\cs_new:Npn \subfiglist_tokenize_integer:NNN #1 #2 #3
 %
 % #1: Token list variable for storing tokenized specification string
-% #2: Sequence containing specification string
+% #2: Token list variable for storing identifier numbers
+% #3: Sequence containing specification string
 %
 {
-  \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \seq_pop_left:NN #3 \subfiglist_tmpa_tl
   \subfiglist_tl_set_wrapped:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
-  \tl_put_right:NV \subfiglist_identifier_nums_tl \subfiglist_tmpb_tl
+  \tl_put_right:NV #2 \subfiglist_tmpb_tl
   
   \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpb_tl { canvas } \subfiglist_tmpa_tl
   \tl_put_right:NV #1 \subfiglist_tmpb_tl
 }
 
-\cs_new:Npn \subfiglist_tokenize_at:NN #1 #2
+\cs_new:Npn \subfiglist_tokenize_at:NNN #1 #2 #3
 %
 % #1: Token list variable for storing tokenized specification string
-% #2: Sequence containing specification string
+% #2: Token list variable for storing identifier numbers
+% #3: Sequence containing specification string
 %
 {
-  \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \seq_pop_left:NN #3 \subfiglist_tmpa_tl
   
-  \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \seq_pop_left:NN #3 \subfiglist_tmpa_tl
   \quark_if_no_value:NTF \subfiglist_tmpa_tl
   {
     \msg_error:nn { subfiglist } { missing~separator }
@@ -1635,16 +1637,17 @@
   }
 }
 
-\cs_new:Npn \subfiglist_tokenize_newline:NN #1 #2
+\cs_new:Npn \subfiglist_tokenize_newline:NNN #1 #2 #3
 %
 % #1: Token list variable for storing tokenized specification string
-% #2: Sequence containing specification string
+% #2: Token list variable for storing identifier numbers
+% #3: Sequence containing specification string
 %
 {
   % Consume newline character
-  \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \seq_pop_left:NN #3 \subfiglist_tmpa_tl
   
-  \seq_get_left:NN #2 \subfiglist_tmpa_tl
+  \seq_get_left:NN #3 \subfiglist_tmpa_tl
   \tl_clear:N \subfiglist_tmpb_tl
   \quark_if_no_value:NTF \subfiglist_tmpa_tl
   {
@@ -1652,24 +1655,24 @@
   }{
     \subfiglist_token_if_eq_charcode:NVTF [ \subfiglist_tmpa_tl
     {
-      \seq_pop_left:NN #2 \subfiglist_tmpa_tl
-      \seq_get_left:NN #2 \subfiglist_tmpa_tl
+      \seq_pop_left:NN #3 \subfiglist_tmpa_tl
+      \seq_get_left:NN #3 \subfiglist_tmpa_tl
       \bool_until_do:nn 
       {
         \bool_lazy_or_p:nn
           { \quark_if_no_value_p:N \subfiglist_tmpa_tl }
           { \subfiglist_token_if_eq_charcode_p:NV ] \subfiglist_tmpa_tl }
       }{
-        \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+        \seq_pop_left:NN #3 \subfiglist_tmpa_tl
         \tl_put_right:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
-        \seq_get_left:NN #2 \subfiglist_tmpa_tl
+        \seq_get_left:NN #3 \subfiglist_tmpa_tl
       }
       
       \quark_if_no_value:NTF \subfiglist_tmpa_tl
       {
         \msg_error:nn { subfiglist } { runaway~optional~argument }
       }{
-        \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+        \seq_pop_left:NN #3 \subfiglist_tmpa_tl
       }
     }{
       \tl_put_right:NV \subfiglist_tmpb_tl \subfiglist_canvas_space_dim
@@ -1679,43 +1682,46 @@
   \tl_put_right:NV #1 \subfiglist_tmpa_tl
 }
 
-\cs_new:Npn \subfiglist_tokenize_subblock:NN #1 #2
+\cs_new:Npn \subfiglist_tokenize_subblock:NNN #1 #2 #3
 %
 % #1: Token list variable for storing tokenized specification string
-% #2: Sequence containing specification string
+% #2: Token list variable for storing identifier numbers
+% #3: Sequence containing specification string
 %
 {
-  \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \seq_pop_left:NN #3 \subfiglist_tmpa_tl
   \group_begin:
     \tl_clear:N #1
-    \subfiglist_tokenize_spec_str:NV #1 \subfiglist_tmpa_tl
+    \subfiglist_tokenize_spec_str:NNV #1 #2 \subfiglist_tmpa_tl
     \subfiglist_tl_set_wrapped:NnV \subfiglist_tmpa_tl { subblock } #1
     \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_tmpa_tl
-    \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_identifier_nums_tl
+    \subfiglist_group_var_return:NN \tl_set:Nn #2
   \group_end:
   \tl_put_right:NV #1 \subfiglist_tmpa_tl
 }
 
-\cs_new:Npn \subfiglist_tokenize_error:NN #1 #2
+\cs_new:Npn \subfiglist_tokenize_error:NNN #1 #2 #3
 %
 % #1: Token list variable for storing tokenized specification string
-% #2: Sequence containing specification string
+% #2: Token list variable for storing identifier numbers
+% #3: Sequence containing specification string
 %
 {
-  \seq_pop_left:NN #2 \subfiglist_tmpa_tl
+  \seq_pop_left:NN #3 \subfiglist_tmpa_tl
   \msg_error:nnV { subfiglist } { parser~error } \subfiglist_tmpa_tl
 }
 
 % Lexer for subfiglist specification
-\cs_new:Npn \subfiglist_tokenize_spec_str:Nn #1 #2
+\cs_new:Npn \subfiglist_tokenize_spec_str:NNn #1 #2 #3
 %
 % #1: Token list variable for storing tokenized specification string
-% #2: Token list containing specification string
+% #2: Token list variable for storing identifier numbers
+% #3: Token list containing specification string
 %
 {
   \group_begin:
     \seq_clear:N \subfiglist_spec_str_seq
-    \tl_map_inline:nn { #2 }
+    \tl_map_inline:nn { #3 }
     {
       \seq_put_right:Nn \subfiglist_spec_str_seq { ##1 }
     }
@@ -1728,17 +1734,17 @@
       {
         \bool_if:nT { \subfiglist_use:c { subfiglist_tokenize_is_ ##1 _p:V } \subfiglist_tmpa_tl }
         {
-          \subfiglist_use:c { subfiglist_tokenize_ ##1 :NN } #1 \subfiglist_spec_str_seq
+          \subfiglist_use:c { subfiglist_tokenize_ ##1 :NNN } #1 #2 \subfiglist_spec_str_seq
           \tl_map_break:
         }
       }
     }
   \subfiglist_group_var_return:NN \tl_set:Nn #1
-  \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_identifier_nums_tl
+  \subfiglist_group_var_return:NN \tl_set:Nn #2
   \group_end:
 }
 
-\cs_generate_variant:Nn \subfiglist_tokenize_spec_str:Nn { NV }
+\cs_generate_variant:Nn \subfiglist_tokenize_spec_str:NNn { NNV }
 
 
 
@@ -3344,7 +3350,7 @@
   % Tokenize subfiglist specification
   \tl_clear:N \subfiglist_identifier_nums_tl
   \seq_clear:N \subfiglist_spec_token_seq
-  \subfiglist_tokenize_spec_str:Nn \subfiglist_tokenized_spec_tl { #3 }
+  \subfiglist_tokenize_spec_str:NNn \subfiglist_tokenized_spec_tl \subfiglist_identifier_nums_tl { #3 }
   
   % Verify identifier numbers
   \subfiglist_verify_identifier_nums:NNN
