Removed obsolete options hoff and voff for subfiglist label.

--- a/TODO
+++ b/TODO
@@ -3,7 +3,6 @@ TODO
 * Test all error messages
 * Delete unnecessary variables
 * Add change of meaning for `@' depending on catcode to known issues. Weird settings of catcodes e.g. for numbers may have strange effects
-* Set \subfiglist_identifier_nums by dependency injection
 * Add logging of canvas numbers to \subfiglist_setup_file:nnn
 * Rewrite error messages for int/float as "expected integer, found ... instead"
 * Replace any \cs in error messages by \token_to_str:c { cs }
@@ -15,7 +14,6 @@ TODO
 * Secure any \prop_get for occurence of \q_empty
 * Caveat: Don't use \subfiglistlineheight for anything related to width.
 * Verify numbers for labels and overlays
-* Option to set label hoff and voff globally. Document default values for no/colored background
 * Test all kinds of weird nestings and alignments
 * Define variables used to store keys
 * Check default dim keys for right format
@@ -53,3 +51,5 @@ DONE
 * Add default value in \subfiglist_tokenize_newline
 * Add option to keep images stored in boxes instead of loading them twice
 * Add starred commands for dummy/dummyfile to add frame
+* Set \subfiglist_identifier_nums by dependency injection
+* Remove obsolete label hoff and voff
