--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -2753,15 +2753,26 @@
 % #3: Image width
 %
 {
-  % Determine file extension.
-  \seq_set_split:Nnn \subfiglist_tmp_seq { . } { #2 }
+  % Strip off path
+  \seq_set_split:Nnn \subfiglist_tmp_seq { / } { #2 }
   \seq_get_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
+  % Determine file extension.
+  \seq_set_split:NnV \subfiglist_tmp_seq { . } \subfiglist_tmpa_tl
+  \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
   % Set command to load images depending on file extension.
-  \subfiglist_tl_if_eq_charcode:nVTF { pdf_tex } \subfiglist_tmpa_tl
+  \seq_if_empty:NTF \subfiglist_tmp_seq
   {
-    \subfiglist_load_svg:Nnn #1 { #2 } { #3 }
-  }{
+    % There is no file extension, only the file name.
+    % Assume bitmap image in this case.
     \subfiglist_load_img:Nnn #1 { #2 } { #3 }
+  }{
+    % Distinguish between file extensions
+    \str_if_eq:nVTF { pdf_tex } \subfiglist_tmpa_tl
+    {
+      \subfiglist_load_svg:Nnn #1 { #2 } { #3 }
+    }{
+      \subfiglist_load_img:Nnn #1 { #2 } { #3 }
+    }
   }
 }
 
