--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -2034,7 +2034,7 @@
   
   % Check if image numbers in subfiglist specification
   % are in ascending order and warn if otherwise
-  \subfiglist_tl_if_eq:VVF #1 #2
+  \str_if_eq:VVF #1 #2
   {
     \msg_warning:nn { subfiglist } { wrong~identifier~order }
   }
@@ -2090,12 +2090,12 @@
 
   % Check if image numbers in subfiglist specification
   % are in ascending order and warn if otherwise
-  \subfiglist_tl_if_eq:VVF #2 #3
+  \str_if_eq:VVF #2 #3
   {
     \msg_warning:nn { subfiglist } { wrong~canvas~order }
   }
   
-  \subfiglist_tl_if_eq:VVF #1 #2
+  \str_if_eq:VVF #1 #2
   {
     \msg_warning:nn { subfiglist } { mismatching~image~order }
   }
@@ -2338,7 +2338,7 @@
   \dim_add:NV #3 \subfiglist_tmpa_tl
   
   \prop_get:NnN \subfiglist_tmp_prop { frame-color } \subfiglist_tmpa_tl
-  \subfiglist_tl_if_eq_charcode:nVF { none } \subfiglist_tmpa_tl
+  \str_if_eq:nVF { none } \subfiglist_tmpa_tl
   {
     \prop_get:NnN \subfiglist_tmp_prop { frame-width } \subfiglist_tmpa_tl
     \prop_get:NnN \subfiglist_tmp_prop { frame-left } \subfiglist_tmpb_tl
@@ -2710,7 +2710,7 @@
 %
 {
   % Has natural width been requested?
-  \subfiglist_tl_if_eq_charcode:nnTF { ! } { #3 }
+  \str_if_eq:nnTF { ! } { #3 }
   {
     % Load with natural width
     \hbox_gset:Nn #1 { \includegraphics { #2 } }
@@ -2734,7 +2734,7 @@
 %
 {
   % Set width of SVG image
-  \subfiglist_tl_if_eq_charcode:nnF { #3 } { ! }
+  \str_if_eq:nnF { #3 } { ! }
     { \cs_gset:Npn \svgwidth { #3 } }
     
   \hbox_gset:Nn #1
@@ -2803,7 +2803,7 @@
   \seq_set_split:Nnn \subfiglist_tmp_seq { . } { #2 }
   \seq_get_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
   % Set command to load images depending on file extension.
-  \subfiglist_tl_if_eq_charcode:nVTF { pdf_tex } \subfiglist_tmpa_tl
+  \str_if_eq:nVTF { pdf_tex } \subfiglist_tmpa_tl
   {
     \subfiglist_load_svg:Nnn #1 { #2 } { #3 }
   }{
@@ -2986,7 +2986,7 @@
         \hspace { \subfiglist_tmpa_dim }
         % Put canvas
         \prop_get:NnN \subfiglist_tmp_prop { frame-color } \subfiglist_tmpa_tl
-        \subfiglist_tl_if_eq_charcode:nVTF { none } \subfiglist_tmpa_tl
+        \str_if_eq:nVTF { none } \subfiglist_tmpa_tl
         {
           \prop_get:NnN \subfiglist_tmp_prop { type } \subfiglist_tmpa_tl
           \subfiglist_use:c { subfiglist_put_ \tl_use:N \subfiglist_tmpa_tl :Nn } \subfiglist_tmp_prop { #1 }
@@ -3075,7 +3075,7 @@
   \subfiglist_tl_set_head:NV \subfiglist_tmpa_tl \subfiglist_tmpa_tl
   \subfiglist_tl_set_unwrapped:NV \subfiglist_tmpb_tl \subfiglist_tmpb_tl
   
-  \subfiglist_tl_if_eq:nVTF { columnwidth } \subfiglist_tmpa_tl
+  \str_if_eq:nVTF { columnwidth } \subfiglist_tmpa_tl
   {
     \begin{minipage}[b]{\subfiglist_tmpb_tl}
       \tl_map_inline:nn { #1 }
@@ -3191,7 +3191,7 @@
                     {
                       \prop_get:NnN \subfiglist_tmp_prop { background } \subfiglist_tmpa_tl
                       % Decide whether label has to be put inside a colorbox or not
-                      \subfiglist_tl_if_eq_charcode:nVTF { none } \subfiglist_tmpa_tl
+                      \str_if_eq:nVTF { none } \subfiglist_tmpa_tl
                         % Either delete next token or use it as argument of \colorbox
                         \use_none:n \colorbox
                           { \subfiglist_tmpa_tl }
